Initial commit: Agent voice calls platform with Twilio integration
Features:
- Restaurant booking via phone call with Google Places integration
- Generic outbound calls for client/colleague notifications
- Twilio integration with call status tracking
- D1 database for call logs and analytics
- 11Labs dynamic variable support for caller phone numbers
- Demo mode with dummy credentials for testing
- Comprehensive API documentation

Tech stack:
- Hono framework on Cloudflare Workers
- TypeScript with full type safety
- Cloudflare D1 for database
- Google Places API for restaurant lookup
- PM2 configuration for local testing

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,43 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Cloudflare Workers & Wrangler
+.wrangler/
+.mf/
+wrangler.toml.backup
+
+# Environment variables & Secrets (CRITICAL)
+.dev.vars
+.env.local
+.env.production
+
+# PM2
+.pm2/
+pm2.log
+
+# Call recordings & sensitive data
+recordings/
+transcripts/*.json
+
+# Database files (local D1 SQLite)
+*.db
+*.sqlite
+*.sqlite3
+
+# Backup files
+*.tar.gz
+*.zip
+*.backup
+*.bak
+
+# OS files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+Thumbs.db
+
+# Build output (will be generated)
+dist/
